--- a/.crds/chainsaw.kyverno.io_configurations.yaml
+++ b/.crds/chainsaw.kyverno.io_configurations.yaml
@@ -183,6 +183,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -681,6 +685,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -1203,6 +1211,10 @@ spec:
                                 - value
                                 type: object
                               type: array
+                            skipCommandOutput:
+                              description: SkipCommandOutput removes the command from
+                                the output logs.
+                              type: boolean
                             skipLogOutput:
                               description: SkipLogOutput removes the output from the
                                 command. Useful for sensitive logs or to reduce noise.
@@ -1704,6 +1716,10 @@ spec:
                                 - value
                                 type: object
                               type: array
+                            skipCommandOutput:
+                              description: SkipCommandOutput removes the command from
+                                the output logs.
+                              type: boolean
                             skipLogOutput:
                               description: SkipLogOutput removes the output from the
                                 command. Useful for sensitive logs or to reduce noise.
