--- a/.schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/.schemas/json/configuration-chainsaw-v1alpha1.json
@@ -583,6 +583,13 @@
                       "additionalProperties": false
                     }
                   },
+                  "skipCommandOutput": {
+                    "description": "SkipCommandOutput removes the command from the output logs.",
+                    "type": [
+                      "boolean",
+                      "null"
+                    ]
+                  },
                   "skipLogOutput": {
                     "description": "SkipLogOutput removes the output from the command. Useful for sensitive logs or to reduce noise.",
                     "type": [
@@ -1401,6 +1408,13 @@
                       },
                       "additionalProperties": false
                     }
+                  },
+                  "skipCommandOutput": {
+                    "description": "SkipCommandOutput removes the command from the output logs.",
+                    "type": [
+                      "boolean",
+                      "null"
+                    ]
                   },
                   "skipLogOutput": {
                     "description": "SkipLogOutput removes the output from the command. Useful for sensitive logs or to reduce noise.",
