--- a/pkg/data/crds/chainsaw.kyverno.io_steptemplates.yaml
+++ b/pkg/data/crds/chainsaw.kyverno.io_steptemplates.yaml
@@ -206,6 +206,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -704,6 +708,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -972,6 +980,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -1470,6 +1482,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -1738,6 +1754,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -2236,6 +2256,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -2715,6 +2739,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
@@ -3630,6 +3658,10 @@ spec:
                             - value
                             type: object
                           type: array
+                        skipCommandOutput:
+                          description: SkipCommandOutput removes the command from
+                            the output logs.
+                          type: boolean
                         skipLogOutput:
                           description: SkipLogOutput removes the output from the command.
                             Useful for sensitive logs or to reduce noise.
