chore(linter): replace exportloopref with copyloopvar and tenv with usetesting in .golangci.yml
Signed-off-by: A. Singh <32884734+A-5ingh@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,12 +5,12 @@ linters:
     - bidichk
     - bodyclose
     - containedctx
+    - copyloopvar
     - decorder
     - dogsled
     - durationcheck
     - errcheck
     - errname
-    - exportloopref
     - gci
     - gochecknoinits
     - gofmt
@@ -30,12 +30,12 @@ linters:
     - nosprintfhostport
     # - paralleltest
     - staticcheck
-    - tenv
     - thelper
     - tparallel
     - typecheck
     - unconvert
     - unused
+    - usetesting
     - wastedassign
     - whitespace
 
