Add skip field to TestStepSpec API and documentation
Signed-off-by: Karthik babu Manam <karthikmanam@gmail.com>

--- a/website/mkdocs.yaml
+++ b/website/mkdocs.yaml
@@ -58,6 +58,7 @@ nav:
     - step/catch.md
     - step/finally.md
     - step/cleanup.md
+    - step/skip.md
 - Operations:
   - operations/index.md
   - operations/apply.md
