feat: Add --no-warnings flag to suppress warning messages
This PR implements the feature requested in issue #2295, adding the ability to suppress warning messages when running chainsaw test.

The implementation:

- Adds a new --no-warnings command line flag to the test command

- Creates a new filtered sink (NewFilteredSink) that skips logs with WarnStatus

- Updates the test command to use the filtered sink when --no-warnings is set

- Adds unit tests for the new filtered sink functionality

- Adds integration tests for the --no-warnings flag

- Creates comprehensive documentation for output control options

- Provides examples demonstrating the flag's usage

This improves user experience by allowing cleaner output during test runs where warnings might be expected or irrelevant.

Resolves: kyverno/chainsaw#2295

Signed-off-by: Karthik babu Manam <karthikmanam@gmail.com>

--- a/website/mkdocs.yaml
+++ b/website/mkdocs.yaml
@@ -42,6 +42,7 @@ nav:
   - test/index.md
   - test/explicit.md
   - test/conventional.md
+  - reference/output-control.md
   - General concepts:
     - general/inheritance.md
     - general/namespace.md
@@ -58,6 +59,7 @@ nav:
     - step/catch.md
     - step/finally.md
     - step/cleanup.md
+    - step/skip.md
 - Operations:
   - operations/index.md
   - operations/apply.md
