chore(deps): update dependencies and improve linter configuration (#2304)
* chore(deps): update actions/setup-go to v5.3.0, golangci-lint-action to v6.5.0

Signed-off-by: A. Singh <32884734+A-5ingh@users.noreply.github.com>

* chore(linter): replace exportloopref with copyloopvar and tenv with usetesting in .golangci.yml

Signed-off-by: A. Singh <32884734+A-5ingh@users.noreply.github.com>

* test(report): use t.TempDir() instead of os.MkdirTemp() in TestSave

Signed-off-by: A. Singh <32884734+A-5ingh@users.noreply.github.com>

---------

Signed-off-by: A. Singh <32884734+A-5ingh@users.noreply.github.com>
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>
Co-authored-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,12 +30,12 @@ linters:
     - nosprintfhostport
     # - paralleltest
     - staticcheck
-    - tenv
     - thelper
     - tparallel
     - typecheck
     - unconvert
     - unused
+    - usetesting
     - wastedassign
     - whitespace
 
