--- a/.crds/chainsaw.kyverno.io_steptemplates.yaml
+++ b/.crds/chainsaw.kyverno.io_steptemplates.yaml
@@ -651,8 +651,8 @@ spec:
                             multi-cluster tests.
                           type: object
                         content:
-                          description: Content defines a shell script (run with "sh
-                            -c ...").
+                          description: Content defines a shell script (run with "$shell
+                            $shellArgs ...").
                           type: string
                         env:
                           description: Env defines additional environment variables.
@@ -707,6 +707,16 @@ spec:
                             - name
                             - value
                             type: object
+                          type: array
+                        shell:
+                          description: Shell defines the host shell (run with "...
+                            $shellArgs $content").
+                          type: string
+                        shellArgs:
+                          description: ShellArgs defines arguments for the host shell
+                            (run with "$shell ... $content").
+                          items:
+                            type: string
                           type: array
                         skipCommandOutput:
                           description: SkipCommandOutput removes the command from
@@ -1425,8 +1435,8 @@ spec:
                             multi-cluster tests.
                           type: object
                         content:
-                          description: Content defines a shell script (run with "sh
-                            -c ...").
+                          description: Content defines a shell script (run with "$shell
+                            $shellArgs ...").
                           type: string
                         env:
                           description: Env defines additional environment variables.
@@ -1481,6 +1491,16 @@ spec:
                             - name
                             - value
                             type: object
+                          type: array
+                        shell:
+                          description: Shell defines the host shell (run with "...
+                            $shellArgs $content").
+                          type: string
+                        shellArgs:
+                          description: ShellArgs defines arguments for the host shell
+                            (run with "$shell ... $content").
+                          items:
+                            type: string
                           type: array
                         skipCommandOutput:
                           description: SkipCommandOutput removes the command from
@@ -2199,8 +2219,8 @@ spec:
                             multi-cluster tests.
                           type: object
                         content:
-                          description: Content defines a shell script (run with "sh
-                            -c ...").
+                          description: Content defines a shell script (run with "$shell
+                            $shellArgs ...").
                           type: string
                         env:
                           description: Env defines additional environment variables.
@@ -2255,6 +2275,16 @@ spec:
                             - name
                             - value
                             type: object
+                          type: array
+                        shell:
+                          description: Shell defines the host shell (run with "...
+                            $shellArgs $content").
+                          type: string
+                        shellArgs:
+                          description: ShellArgs defines arguments for the host shell
+                            (run with "$shell ... $content").
+                          items:
+                            type: string
                           type: array
                         skipCommandOutput:
                           description: SkipCommandOutput removes the command from
@@ -3601,8 +3631,8 @@ spec:
                             multi-cluster tests.
                           type: object
                         content:
-                          description: Content defines a shell script (run with "sh
-                            -c ...").
+                          description: Content defines a shell script (run with "$shell
+                            $shellArgs ...").
                           type: string
                         env:
                           description: Env defines additional environment variables.
@@ -3657,6 +3687,16 @@ spec:
                             - name
                             - value
                             type: object
+                          type: array
+                        shell:
+                          description: Shell defines the host shell (run with "...
+                            $shellArgs $content").
+                          type: string
+                        shellArgs:
+                          description: ShellArgs defines arguments for the host shell
+                            (run with "$shell ... $content").
+                          items:
+                            type: string
                           type: array
                         skipCommandOutput:
                           description: SkipCommandOutput removes the command from
