--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -652,8 +652,8 @@ spec:
                             multi-cluster tests.
                           type: object
                         content:
-                          description: Content defines a shell script (run with "sh
-                            -c ...").
+                          description: Content defines a shell script (run with "$shell
+                            $shellArgs ...").
                           type: string
                         env:
                           description: Env defines additional environment variables.
@@ -708,6 +708,16 @@ spec:
                             - name
                             - value
                             type: object
+                          type: array
+                        shell:
+                          description: Shell defines the host shell (run with "...
+                            $shellArgs $content").
+                          type: string
+                        shellArgs:
+                          description: ShellArgs defines arguments for the host shell
+                            (run with "$shell ... $content").
+                          items:
+                            type: string
                           type: array
                         skipCommandOutput:
                           description: SkipCommandOutput removes the command from
@@ -1596,7 +1606,7 @@ spec:
                                 type: object
                               content:
                                 description: Content defines a shell script (run with
-                                  "sh -c ...").
+                                  "$shell $shellArgs ...").
                                 type: string
                               env:
                                 description: Env defines additional environment variables.
@@ -1651,6 +1661,16 @@ spec:
                                   - name
                                   - value
                                   type: object
+                                type: array
+                              shell:
+                                description: Shell defines the host shell (run with
+                                  "... $shellArgs $content").
+                                type: string
+                              shellArgs:
+                                description: ShellArgs defines arguments for the host
+                                  shell (run with "$shell ... $content").
+                                items:
+                                  type: string
                                 type: array
                               skipCommandOutput:
                                 description: SkipCommandOutput removes the command
@@ -2390,7 +2410,7 @@ spec:
                                 type: object
                               content:
                                 description: Content defines a shell script (run with
-                                  "sh -c ...").
+                                  "$shell $shellArgs ...").
                                 type: string
                               env:
                                 description: Env defines additional environment variables.
@@ -2445,6 +2465,16 @@ spec:
                                   - name
                                   - value
                                   type: object
+                                type: array
+                              shell:
+                                description: Shell defines the host shell (run with
+                                  "... $shellArgs $content").
+                                type: string
+                              shellArgs:
+                                description: ShellArgs defines arguments for the host
+                                  shell (run with "$shell ... $content").
+                                items:
+                                  type: string
                                 type: array
                               skipCommandOutput:
                                 description: SkipCommandOutput removes the command
@@ -3226,7 +3256,7 @@ spec:
                                 type: object
                               content:
                                 description: Content defines a shell script (run with
-                                  "sh -c ...").
+                                  "$shell $shellArgs ...").
                                 type: string
                               env:
                                 description: Env defines additional environment variables.
@@ -3281,6 +3311,16 @@ spec:
                                   - name
                                   - value
                                   type: object
+                                type: array
+                              shell:
+                                description: Shell defines the host shell (run with
+                                  "... $shellArgs $content").
+                                type: string
+                              shellArgs:
+                                description: ShellArgs defines arguments for the host
+                                  shell (run with "$shell ... $content").
+                                items:
+                                  type: string
                                 type: array
                               skipCommandOutput:
                                 description: SkipCommandOutput removes the command
@@ -4694,7 +4734,7 @@ spec:
                                 type: object
                               content:
                                 description: Content defines a shell script (run with
-                                  "sh -c ...").
+                                  "$shell $shellArgs ...").
                                 type: string
                               env:
                                 description: Env defines additional environment variables.
@@ -4749,6 +4789,16 @@ spec:
                                   - name
                                   - value
                                   type: object
+                                type: array
+                              shell:
+                                description: Shell defines the host shell (run with
+                                  "... $shellArgs $content").
+                                type: string
+                              shellArgs:
+                                description: ShellArgs defines arguments for the host
+                                  shell (run with "$shell ... $content").
+                                items:
+                                  type: string
                                 type: array
                               skipCommandOutput:
                                 description: SkipCommandOutput removes the command
