--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha2.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha2.json
@@ -1445,7 +1445,7 @@
                         }
                       },
                       "content": {
-                        "description": "Content defines a shell script (run with \"sh -c ...\").",
+                        "description": "Content defines a shell script (run with \"$shell -c ...\").",
                         "type": [
                           "string",
                           "null"
@@ -1536,6 +1536,13 @@
                           },
                           "additionalProperties": false
                         }
+                      },
+                      "shell": {
+                        "description": "Shell defines the host shell (run with \"... -c $content\").",
+                        "type": [
+                          "string",
+                          "null"
+                        ]
                       },
                       "skipCommandOutput": {
                         "description": "SkipCommandOutput removes the command from the output logs.",
