--- a/.schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/.schemas/json/configuration-chainsaw-v1alpha1.json
@@ -1409,6 +1409,13 @@
                       "additionalProperties": false
                     }
                   },
+                  "shell": {
+                    "description": "Shell defines the host shell (run with \"... -c $content\").",
+                    "type": [
+                      "string",
+                      "null"
+                    ]
+                  },
                   "skipCommandOutput": {
                     "description": "SkipCommandOutput removes the command from the output logs.",
                     "type": [
