--- a/.schemas/json/configuration-chainsaw-v1alpha2.json
+++ b/.schemas/json/configuration-chainsaw-v1alpha2.json
@@ -1537,6 +1537,13 @@
                           "additionalProperties": false
                         }
                       },
+                      "shell": {
+                        "description": "Shell defines the host shell (run with \"... -c $content\").",
+                        "type": [
+                          "string",
+                          "null"
+                        ]
+                      },
                       "skipCommandOutput": {
                         "description": "SkipCommandOutput removes the command from the output logs.",
                         "type": [
