--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
@@ -583,13 +583,6 @@
                       "additionalProperties": false
                     }
                   },
-                  "shell": {
-                    "description": "Shell defines the host shell (run with \"... -c $content\").",
-                    "type": [
-                      "string",
-                      "null"
-                    ]
-                  },
                   "skipCommandOutput": {
                     "description": "SkipCommandOutput removes the command from the output logs.",
                     "type": [
@@ -1324,7 +1317,7 @@
                     }
                   },
                   "content": {
-                    "description": "Content defines a shell script (run with \"$shell -c ...\").",
+                    "description": "Content defines a shell script (run with \"$shell $shellArgs ...\").",
                     "type": [
                       "string",
                       "null"
@@ -1414,6 +1407,26 @@
                         }
                       },
                       "additionalProperties": false
+                    }
+                  },
+                  "shell": {
+                    "description": "Shell defines the host shell (run with \"... $shellArgs $content\").",
+                    "type": [
+                      "string",
+                      "null"
+                    ]
+                  },
+                  "shellArgs": {
+                    "description": "ShellArgs defines arguments for the host shell (run with \"$shell ... $content\").",
+                    "type": [
+                      "array",
+                      "null"
+                    ],
+                    "items": {
+                      "type": [
+                        "string",
+                        "null"
+                      ]
                     }
                   },
                   "skipCommandOutput": {
