--- a/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
+++ b/pkg/data/schemas/json/configuration-chainsaw-v1alpha1.json
@@ -1317,7 +1317,7 @@
                     }
                   },
                   "content": {
-                    "description": "Content defines a shell script (run with \"sh -c ...\").",
+                    "description": "Content defines a shell script (run with \"$shell $shellArgs ...\").",
                     "type": [
                       "string",
                       "null"
@@ -1407,6 +1407,26 @@
                         }
                       },
                       "additionalProperties": false
+                    }
+                  },
+                  "shell": {
+                    "description": "Shell defines the host shell (run with \"... $shellArgs $content\").",
+                    "type": [
+                      "string",
+                      "null"
+                    ]
+                  },
+                  "shellArgs": {
+                    "description": "ShellArgs defines arguments for the host shell (run with \"$shell ... $content\").",
+                    "type": [
+                      "array",
+                      "null"
+                    ],
+                    "items": {
+                      "type": [
+                        "string",
+                        "null"
+                      ]
                     }
                   },
                   "skipCommandOutput": {
