fix: kos config in goreleaser
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -45,7 +45,8 @@ builds:
 kos:
   - build: chainsaw
     base_image: cgr.dev/chainguard/kubectl:latest-dev
-    repository: ghcr.io/kyverno/chainsaw
+    repositories:
+      - ghcr.io/kyverno/chainsaw
     tags:
       - '{{.Tag}}'
       - '{{ if not .Prerelease }}latest{{ end }}' 
